#piesni align center fix

--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  align-items: center;
 }
 
 #hymnBook {
